--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: var(--clr-neutral--300);
+  font-family: var(--ff-primary);
+  font-size: var(--fs-primary);
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: 1fr 4fr 1fr;
+}
