--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
   /* Fonts */
   --ff-primary: 'Lexend Deca', sans-serif;
   --ff-accent: 'Big Shoulders Display', cursive;
-  --fs-primary: 0.875rem;
+  --fs-primary: 1.1rem;
   --br: 1.7em;
 }
 
@@ -34,8 +34,10 @@ body {
   font-size: var(--fs-primary);
   color: var(--clr-neutral--100);
   display: grid;
-  grid-template-columns: 1fr 10fr 1fr;
-  grid-template-rows: 1fr 8fr 1fr;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: 2fr 5fr 2fr;
+  height: 100vh;
+  width: 100vw;
 }
 
 .main__container {
@@ -44,11 +46,41 @@ body {
   justify-self: center;
   align-self: center;
   display: flex;
-  max-width: 60%;
 }
 
 .outline {
-  padding: 2rem;
+  padding: 3.5em;
+  max-width: 23rem;
+  display: grid;
+  grid-template-rows: 0.1fr 0.1fr 4fr 0.1fr;
+  gap: 2rem;
+}
+
+.section__title {
+  font-family: var(--ff-accent);
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+
+.section__description {
+  line-height: 1.7;
+}
+
+.btn__holder {
+  text-transform: capitalize;
+  display: flex;
+  justify-content: start;
+  align-self: center;
+
+}
+
+.btn {
+  background-color: var(--clr-neutral--300);
+  border-radius: var(--br);
+  padding: 0.8em 2em;
+  color: black;
+  text-align: center;
+  font-size: 1rem;
 }
 
 .section-1 {
