--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,9 @@ body {
   display: flex;
 }
 
-.outline {
-  padding: 3.5em;
-  max-width: 23rem;
+.section {
+  padding: 3em;
+  min-width: 22rem;
   display: grid;
   grid-template-rows: 0.1fr 0.1fr 4fr 0.1fr;
   gap: 2rem;
