--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,3 +124,34 @@ body {
   justify-self: center;
   align-self: center;
 }
+
+@media screen and (max-width: 1000px) {
+  body {
+    background-color: aqua;
+  }
+
+
+  body {
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: minmax(5rem, 2fr) 5fr 2fr;
+    height: 100vh;
+    width: 100vw;
+  }
+
+
+  .main__container {
+    flex-direction: column;
+  }
+
+  .section {
+    padding: 2.5em;
+    grid-template-rows: 0.1fr 0.3fr 2fr 1fr;
+    gap: 1.5rem;
+  }
+
+  .section__description {
+    line-height: 1.5;
+    font-size: 0.9rem;
+  }
+
+}
