--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,39 @@ body {
 
 
   body {
-    grid-template-columns: 1fr 4fr 1fr;
+    /* grid-template-columns: 1fr 4fr 1fr; */
+    grid-template-rows: minmax(5rem, 2fr) 5fr 2fr;
+  }
+
+
+  .main__container {
+    flex-direction: column;
+  }
+
+  .section-1 {
+    background-color: var(--clr-accent--300);
+    border-top-left-radius: var(--br2);
+    border-top-right-radius: var(--br2);
+    border-bottom-left-radius: unset;
+  }
+
+  .section-3 {
+    background-color: var(--clr-accent--900);
+    border-top-right-radius: unset;
+    border-bottom-left-radius: var(--br2);
+    border-bottom-right-radius: var(--br2);
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    background-color: aqua;
+  }
+
+
+  body {
+    grid-template-columns: 0.5fr 4fr 0.5fr;
     grid-template-rows: minmax(5rem, 2fr) 5fr 2fr;
     height: 100vh;
     width: 100vw;
