--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,11 +126,9 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
-
   body {
     grid-template-rows: minmax(5rem, 2fr) 5fr 2fr;
   }
-
 
   .main__container {
     flex-direction: column;
@@ -149,15 +147,12 @@ body {
     border-bottom-left-radius: var(--br2);
     border-bottom-right-radius: var(--br2);
   }
-
 }
 
 @media screen and (max-width: 700px) {
-
   body {
     grid-template-columns: 0.5fr 4fr 0.5fr;
   }
-
 
   .main__container {
     flex-direction: column;
@@ -177,5 +172,20 @@ body {
     line-height: 1.5;
     font-size: 0.9rem;
   }
+}
 
+@media screen and (max-width: 300px) {
+  .section {
+    padding: 2.5em 1.8em;
+    min-width: 10rem;
+  }
+
+  .btn {
+    background-color: var(--clr-neutral--300);
+    border-radius: var(--br);
+    padding: 0.5em 1em;
+    text-align: center;
+    font-size: 0.8rem;
+    border: 2px solid var(--clr-neutral--300);
+  }
 }
